<resources>
    <string name="app_name">INFS 3605 ESS</string>

    <string name="language_en">English</string>
    <string name="language_zh">Chinese</string>

    <string name="title_activity_home">MainActivity</string>
    <string name="title_dashboard">Home</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_home">Home</string>
    <string name="title_account">My Account</string>
    <string name="title_invoices">Invoices</string>


    <string name="fragment_invoices_1">Paid</string>
    <string name="fragment_invoices_2">Unpaid</string>
    <string name="fragment_invoices_3">Overdue</string>

    <string name="activity_forgot_password_1">Forgot Password?</string>
    <string name="activity_forgot_password_2">Recover your password if you have forgot it!</string>
    <string name="activity_forgot_password_3">Email</string>
    <string name="activity_forgot_password_4">Submit</string>
    <string name="activity_main_1">Log In</string>
    <string name="activity_main_2">Login now to track all your expenses and income at a place!</string>
    <string name="activity_main_3">Email</string>
    <string name="activity_main_4">Password</string>
    <string name="activity_main_5">Forget Password</string>
    <string name="activity_main_6">Login</string>
    <string name="activity_main_7">Continue with Google</string>
    <string name="activity_main_8">Don’t have an account?</string>
    <string name="activity_main_9">Register</string>
    <string name="activity_pay_success_1">Your invoice was marked as Paid, you can find it in the Paid Invoice list later</string>
    <string name="activity_pay_success_2">Upload Bank Slip</string>
    <string name="activity_pay_success_3">Share with Email</string>
    <string name="activity_pay_success_4">Back</string>
    <string name="activity_register_1">Register</string>
    <string name="activity_register_2">Create an account to access all the  features of E-Invoice</string>
    <string name="activity_register_3">Company Name</string>
    <string name="activity_register_4">Email</string>
    <string name="activity_register_5">Your Name</string>
    <string name="activity_register_6">Your Password</string>
    <string name="activity_register_7">Register</string>
    <string name="activity_register_8">Already have an account?</string>
    <string name="activity_register_9">Login</string>
    <string name="activity_scan_1">EXTRACT</string>
    <string name="activity_scan_2">Scan from Camera</string>
    <string name="activity_scan_3">Choose from Gallery</string>
    <string name="activity_scan_result_1">Scan</string>
    <string name="activity_scan_result_2">Check Scanned Details!</string>
    <string name="activity_scan_result_3">Issuer</string>
    <string name="activity_scan_result_4">Country</string>
    <string name="activity_scan_result_5">State</string>
    <string name="activity_scan_result_6">City</string>
    <string name="activity_scan_result_7">Street</string>
    <string name="activity_scan_result_8">Invoice Number</string>
    <string name="activity_scan_result_9">Invoice Date</string>
    <string name="activity_scan_result_10">Due Date</string>
    <string name="activity_scan_result_11">Tax</string>
    <string name="activity_scan_result_12">Subtotal</string>
    <string name="activity_scan_result_13">Shipping/Handling</string>
    <string name="activity_scan_result_14">Total Amount</string>
    <string name="activity_scan_result_15">Save</string>

    <string name="fragment_dashboard_1">Scan</string>
    <string name="fragment_dashboard_2">Scan paper invoice to generate electronic invoice</string>
    <string name="fragment_dashboard_3">Your don\'t have invoice near the due date!</string>
    <string name="fragment_dashboard_4">Unpaid Invoice Near the Due Date</string>
    <string name="fragment_dashboard_5">Pay</string>
    <string name="change_language_title">Select Your Language</string>
    <string name="profile_welcome">Welcome Back!</string>
    <string name="profile_logout">Log Out</string>
    <string name="profile_changeLanguage">Change Language</string>
    <string name="profile_why">What is E-Tree?</string>
    <string name="dashboard_start">Hi, </string>
    <string name="dashboard_start2">Start Scanning your invoice to thrive your tree!</string>
    <string name="dashboard_start3">Unpaid Invoices Near the Due Date</string>
    <string name="intro_name"> E-Tree </string>
    <string name="intro_first">We are now proudly introducing our E-Tree project to
        you! We sincerely cooperate with Venatata making the world
 a better place with your help!</string>
    <string name="intro_second">Every 200 E-invoices you upload to our server will be recorded and converted into ONE leaf.When you collect 5 leaves, we and Vennatata will
plant an actual tree in the forest! </string>
    <string name="intro_third">The world will get better while we helping you to boost you company efficiency.You are not just SAVING the tree\'s life by using E-invoice, but you are also CREATING more lives!
    </string>
    <string name="profile_one_leaf">Your tree baby need more nutrients, upload more E-invoice!</string>
    <string name="profile_three_leaf">You are almost there!</string>
    <string name="cong">Congratulations! </string>
    <string name="cong_1">Your precious tree was planted to make your city and this planet even better!</string>
    <string name="cong_notice">We will contact you via email within 20 workdays. You shall receive the picture of your tree and a digital certification for promoting your effort with other people!</string>
    <string name="cong_next">Start Planting Your Next Tree</string>
    <string name="profile_upload">Upload Now</string>
    <string name="paysuccess">Invoice Number</string>
    <string name="invoice_view_1">Your Invoice</string>
    <string name="invoice_view_2">Date</string>
    <string name="invoice_view_3">Product Description</string>
    <string name="invoice_view_4">Price Total</string>
    <string name="invoice_view_5">Due date</string>
    <string name="invoice_view_6">Tax:</string>
    <string name="invoice_view_7">Subtotal:</string>
    <string name="invoice_view_8">Shipping/Handling:</string>
    <string name="invoice_view_9">Total due:</string>
    <string name="invoice_view_Title_paid">Paid</string>
    <string name="invoice_view_Title_unpaid">Unpaid</string>
    <string name="invoice_view_Title_overdue">Overdue</string>
    <string name="invoice_view_Content_paid">You are good to go!</string>
    <string name="invoice_view_Content_unpaid">Your invoice had not been paid!</string>
    <string name="invoice_view_Content_overdue">Consult issuer for more details!</string>
    <string name="invoice_view_name">Name</string>
    <string name="invoice_view_qty">Qty</string>
    <string name="invoice_view_up">Unit Price</string>
    <string name="invoice_view_tp">Total Price</string>
    <string name="activity_scan_description_modify_1">Item Name:</string>
    <string name="activity_scan_description_modify_2">Price:</string>
    <string name="activity_scan_description_modify_3">Quantity:</string>
    <string name="activity_scan_description_modify_4">Total:</string>
    <string name="activity_scan_description_modify_5">Product Description (Click on product to edit)</string>
    <string name="Scan_description_modify_6">Item</string>
    <string name="save_success_text"> You had successfully upload your Invoice!</string>
    <string name="save_success_btt1"> Upload More</string>
    <string name="save_success_btt2"> Back</string>
    <string name="invoice_list_hint_pay">You don\'t have invoices Paid!</string>
    <string name="invoice_list_hint_unpaid">You don\'t have invoices Unpaid!</string>
    <string name="invoice_list_hint_overdue">You don\'t have invoices Overdue!</string>

    <string name="item_view_1">View</string>
    <string name="item_view_2">Total: </string>

    <string name="activity_scan_result_view_1">You are good to go!</string>
    <string name="activity_scan_result_view_2">Check scanned details!</string>
    <string name="activity_scan_result_view_3">Edit detail information</string>
    <string name="activity_scan_result_view_4">Save for control</string>




</resources>