<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScanResultActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/Modify_Item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="20dp"
            android:text="@string/activity_scan_result_1"
            android:textColor="@color/blue"
            android:textFontWeight="700"
            android:textSize="32dp" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="286dp"
            android:layout_height="44dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/inter"
            android:text="@string/activity_scan_result_2"
            android:textColor="#000000"
            android:textFontWeight="400"
            android:textSize="16dp" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="245dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewName"
                    android:layout_width="300dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/activity_scan_result_3"
                    android:textColor="#000000"
                    android:textFontWeight="700"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/Issuer"
                    android:layout_width="343dp"
                    android:layout_height="44dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_bg"
                    android:editable="true" />

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="300dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/activity_scan_result_4"
                    android:textColor="#000000"
                    android:textFontWeight="700"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/Country"
                    android:layout_width="343dp"
                    android:layout_height="44dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_bg"
                    android:editable="true" />

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="300dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/activity_scan_result_5"
                    android:textColor="#000000"
                    android:textFontWeight="700"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/State"
                    android:layout_width="343dp"
                    android:layout_height="44dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_bg"
                    android:editable="true" />

                <TextView
                    android:id="@+id/textView28"
                    android:layout_width="300dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/activity_scan_result_6"
                    android:textColor="#000000"
                    android:textFontWeight="700"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/City"
                    android:layout_width="343dp"
                    android:layout_height="44dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_bg"
                    android:editable="true" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="300dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/activity_scan_result_7"
                    android:textColor="#000000"
                    android:textFontWeight="700"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/Street"
                    android:layout_width="343dp"
                    android:layout_height="44dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_bg"
                    android:editable="true" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="300dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/activity_scan_result_8"
                    android:textColor="#000000"
                    android:textFontWeight="700"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/InvoiceNum"
                    android:layout_width="343dp"
                    android:layout_height="44dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_bg"
                    android:editable="true" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="300dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/activity_scan_result_9"
                    android:textColor="#000000"
                    android:textFontWeight="700"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/InvoiceDate"
                    android:layout_width="343dp"
                    android:layout_height="44dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_bg"
                    android:editable="true" />

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="300dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/activity_scan_result_10"
                    android:textColor="#000000"
                    android:textFontWeight="700"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/DueDate"
                    android:layout_width="343dp"
                    android:layout_height="44dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_bg"
                    android:editable="true" />

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="300dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/activity_scan_result_11"
                    android:textColor="#000000"
                    android:textFontWeight="700"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/Tax"
                    android:layout_width="343dp"
                    android:layout_height="44dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_bg"
                    android:editable="true" />

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="300dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/activity_scan_result_12"
                    android:textColor="#000000"
                    android:textFontWeight="700"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/Name"
                    android:layout_width="343dp"
                    android:layout_height="44dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_bg"
                    android:editable="true" />

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="300dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/activity_scan_result_13"
                    android:textColor="#000000"
                    android:textFontWeight="700"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/ShipHand"
                    android:layout_width="343dp"
                    android:layout_height="44dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_bg"
                    android:editable="true" />

                <TextView
                    android:id="@+id/textViewExtra"
                    android:layout_width="300dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/activity_scan_result_14"
                    android:textColor="#000000"
                    android:textFontWeight="700"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/Total"
                    android:layout_width="343dp"
                    android:layout_height="44dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_bg"
                    android:editable="true" />

            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:fontFamily="@font/inter"
            android:gravity="center"
            android:text="@string/activity_scan_description_modify_5"
            android:textColor="@color/black"
            android:textFontWeight="700"
            android:textSize="16dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleView"
            android:layout_width="403dp"
            android:layout_height="149dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="0dp">

        </androidx.recyclerview.widget.RecyclerView>

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/activity_scan_result_15" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>