<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_invoices"
        android:name="com.example.infs3605ess.ui.invoices.InvoicesFragment"
        android:label="@string/title_invoices"
        tools:layout="@layout/fragment_invoices" >
        <action
            android:id="@+id/action_navigation_invoices_to_navigation_myaccount"
            app:destination="@id/navigation_myaccount" />
        <action
            android:id="@+id/action_navigation_invoices_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.infs3605ess.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_invoices"
            app:destination="@id/navigation_invoices" />
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_myaccount"
            app:destination="@id/navigation_myaccount" />
    </fragment>

    <fragment
        android:id="@+id/navigation_myaccount"
        android:name="com.example.infs3605ess.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_myaccount" >
        <action
            android:id="@+id/action_navigation_myaccount_to_navigation_invoices"
            app:destination="@id/navigation_invoices" />
        <action
            android:id="@+id/action_navigation_myaccount_to_navigation_dashboard3"
            app:destination="@id/navigation_dashboard" />
    </fragment>
</navigation>