<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_height="500dp"
    android:layout_marginStart="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="100dp"
    android:layout_marginEnd="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    android:background="#97FFFFFF">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView3"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/congrate" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="234dp"
        android:layout_height="38dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/inter"
        android:gravity="center"
        android:text="@string/cong"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView3" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="304dp"
        android:layout_height="71dp"
        android:fontFamily="@font/inter"
        android:gravity="center"
        android:text="@string/cong_notice"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/textView36"
        app:layout_constraintStart_toStartOf="@+id/textView36"
        app:layout_constraintTop_toBottomOf="@+id/textView38" />

    <Button
        android:id="@+id/start_new"
        android:layout_width="175dp"
        android:layout_height="72dp"
        android:layout_marginTop="15dp"
        android:text="Start Planting Your Next Tree"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView37" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="303dp"
        android:layout_height="53dp"
        android:fontFamily="@font/inter"
        android:gravity="center"
        android:text="@string/cong_1"
        android:textColor="@color/medium_green"
        android:textFontWeight="800"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView36" />


</androidx.constraintlayout.widget.ConstraintLayout>